syntax = "proto3";

import "google/protobuf/empty.proto";
import "vendor-proto/validate/validate.proto";
option go_package = "pkg/api/notes/v1;notes";

service Notes {

    rpc SaveNote(SaveNoteRequest) returns (SaveNoteResponse) {}

    rpc ListNotes(google.protobuf.Empty) returns (ListNotesResponse) {}

    rpc GetNoteById(GetNoteRequest) returns (GetNoteResponse) {}

    rpc DeleteNoteById(DeleteNoteRequest) returns (DeleteNoteResponse) {}

    rpc UpdateNoteById(UpdateNoteRequest) returns (UpdateNoteResponse) {}
}

message NoteInfo {
    string title = 1 [(validate.rules).string = {
        min_len:3,
        max_len:140,
    }];
    string content = 2 [(validate.rules).string = {
        min_len:10,
        max_len:1500,
    }];
}

message Note {
    uint64 node_id = 1;
    NoteInfo info = 2 [(validate.rules).message.required = true];
}

message SaveNoteRequest {
    NoteInfo info = 1 [(validate.rules).message.required = true];
}

message SaveNoteResponse {
    uint64 note_id = 1; 
}

message ListNotesResponse {
    repeated Note notes = 1;
}


message UpdateNoteRequest {
    uint64 note_id = 1;
    NoteInfo info = 2 [(validate.rules).message.required = true];
}
message UpdateNoteResponse {
    Note note = 1;
}

message DeleteNoteRequest {
    uint64 note_id = 1;
}
message DeleteNoteResponse {
    bool is_delete = 1;
}

message GetNoteRequest {
    uint64 note_id = 1;
}
message GetNoteResponse {
    bool is_exist = 1;
    Note note = 2;
}